tests/NormalTests/paczka1/fuzzy1/61831823.err
Error in line 9: m1Vwif S157 }9,7
Error in line 11: ysr5ZXZY A299 8,0
Error in line 16: ysr5ZXZY S157 25,4
Error in line 29: m1Vwif S157 -1,0
Error in line 30: nun8qz6qV S157 54,6
